Added Support for ClaimReview

--- a/popup.html
+++ b/popup.html
@@ -25,6 +25,12 @@
         </h5>
         <p id="profile-prompt">(...)</p>
 
+        <div class="card" style="width: 99%;">
+            <div class="card-body" id="claimReviewDisplay">
+                (?)
+            </div>
+          </div>
+        <hr>
         <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#collapseSource" aria-expanded="false"
             aria-controls="collapseSource">
             Source Information
