Fix some colouring, new screenshots and README

--- a/popup.html
+++ b/popup.html
@@ -29,13 +29,13 @@
             <div class="card-body" id="claimReviewDisplay">
                 (?)
             </div>
-          </div>
+        </div>
         <hr>
         <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#collapseSource" aria-expanded="false"
             aria-controls="collapseSource">
             Source Information
         </button>
-        <a class="btn btn-info btn-sm" href="mailto:timothy_liu@mymail.sutd.edu.sg" role="button">
+        <a class="btn btn-info btn-sm" href="mailto:timothy_liu@mymail.sutd.edu.sg"  target="_blank" role="button">
             Give Feedback
         </a>
         <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapseDebug" aria-expanded="false"
@@ -55,7 +55,7 @@
                 <code id="debug-display">(?)</code>
                 <small>
                     <hr>
-                    <p>Prototype Chrome Extension - MVP 2
+                    <p>Prototype Chrome Extension - MVP 3
                         <br> Singapore University of Technology and Design</p>
                 </small>
             </div>
