Loading gif + Verdict display

--- a/popup.html
+++ b/popup.html
@@ -12,22 +12,22 @@
 
 <body>
     <main role="main" class="container">
-        <h5 id="title-display">(?)</h5>
-        <p id="domain-display">(?)</p>
+        <h5 id="title-display"><img src="loader.gif"></h5>
+        <p id="domain-display"><img src="loader.gif"></p>
         <h5>Headline
-            <span class="badge" id="clickbait-display">(?)</span>
+            <span class="badge" id="clickbait-display"><img src="loader.gif"></span>
         </h5>
-        <p id="clickbait-prompt">(...)</p>
+        <p id="clickbait-prompt"><img src="loader.gif"></p>
         <h5>Text
-            <span class="badge" id="profile-display">(?)</span>
-            <span class="badge" id="toxic-display">(?)</span>
-            <span class="badge" id="subj-display">(?)</span>
+            <span class="badge" id="profile-display"><img src="loader.gif"></span>
+            <span class="badge" id="toxic-display"><img src="loader.gif"></span>
+            <span class="badge" id="subj-display"><img src="loader.gif"></span>
         </h5>
-        <p id="profile-prompt">(...)</p>
+        <p id="profile-prompt"><img src="loader.gif"></p>
 
         <div class="card" style="width: 99%;">
-            <div class="card-body" id="claimReviewDisplay">
-                (?)
+            <div class="card-body" id="claimReviewDisplay" style="display: none;">
+                <img src="loader.gif">
             </div>
         </div>
         <hr>
@@ -52,7 +52,7 @@
         </div>
         <div class="collapse" id="collapseDebug">
             <div class="card card-body">
-                <code id="debug-display">(?)</code>
+                <code id="debug-display"><img src="loader.gif"></code>
                 <small>
                     <hr>
                     <p>Prototype Chrome Extension - MVP 3
