Updated to match changes in API

--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,6 @@
         <p id="clickbait-prompt"><img src="loader.gif"></p>
         <h5>Text
             <span class="badge" id="profile-display"><img src="loader.gif"></span>
-            <span class="badge" id="toxic-display"><img src="loader.gif"></span>
             <span class="badge" id="subj-display"><img src="loader.gif"></span>
         </h5>
         <p id="profile-prompt"><img src="loader.gif"></p>
@@ -30,32 +29,34 @@
                 <img src="loader.gif">
             </div>
         </div>
-        <hr>
-        <button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#collapseSource" aria-expanded="false"
-            aria-controls="collapseSource">
+        <br>
+        <!--<button class="btn btn-primary btn-sm" type="button" data-toggle="collapse" data-target="#collapseSource"
+            aria-expanded="false" aria-controls="collapseSource">
             Source Information
-        </button>
-        <a class="btn btn-info btn-sm" href="mailto:timothy_liu@mymail.sutd.edu.sg"  target="_blank" role="button">
+        </button>-->
+        <a class="btn btn-info btn-sm" href="https://docs.google.com/forms/d/e/1FAIpQLSezG_Valk4FMxU9k5y0-en4jxSy9gr0Z3JKswnxtRcOTYrMSg/viewform"
+            target="_blank" role="button">
             Give Feedback
         </a>
-        <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapseDebug" aria-expanded="false"
-            aria-controls="collapseExample">
+        <button class="btn btn-secondary btn-sm" type="button" data-toggle="collapse" data-target="#collapseDebug"
+            aria-expanded="false" aria-controls="collapseExample">
             Debug
         </button>
-        <div class="collapse" id="collapseSource">
+        <!--<div class="collapse" id="collapseSource">
             <div class="card card-body">
                 <h5 class="card-title">Source Name</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Origin Country</h6>
+                <h6 class="card-subtitle mb-2 text-muted">Placeholder</h6>
                 <p class="card-text">Placeholder: Placeholder</p>
                 <a href="#" class="card-link">Wikipedia</a>
             </div>
-        </div>
+        </div>-->
         <div class="collapse" id="collapseDebug">
             <div class="card card-body">
                 <code id="debug-display"><img src="loader.gif"></code>
                 <small>
                     <hr>
-                    <p>Prototype Chrome Extension - MVP 3
+                    <p><a href="https://github.com/tlkh/fake-news-chrome-extension" target="_blank">Chrome Extension</a>
+                        - MVP 4
                         <br> Singapore University of Technology and Design</p>
                 </small>
             </div>
